# nastyaorchestrator

./: .env.example  .gitignore  .secrets.json.example  AGENTS.md  CHANGELOG.md  CLAUDE.md  auth.bat  build-portable.bat  create-desktop-shortcut.bat  debug-worker.bat  dev-gui.bat  dev-gui.pyw  gpt-login.bat  gpt-logout.bat  local-build.bat  package.json  portable-auth.bat  portable-open-notes.bat  portable-run-backend.bat  portable-run-worker.bat  portable-start.bat  portable-stop.bat  pyproject.toml  pytest.ini  remote-config.json  requirements.txt  start.bat  stop.bat
.github/: dependabot.yml
backend/: __init__.py  main.py
config/: models.json  projects.json  settings.json
deploy/: deploy.sh  nastya-orchestrator.service  nginx.conf  setup.sh
frontend/: index.html  package-lock.json  package.json  vite.config.ts
memory/: lessons-learned.md
scripts/: diag_documents.py  setup-signing.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: lib.rs  main.rs
tests/: conftest.py  test_aitunnel_executor_http.py  test_aitunnel_pdf.py  test_chat_sessions.py  test_circuit_breaker.py  test_document_extraction.py  test_documents_content.py  test_executor_argv.py  test_gemini_executor.py  test_issue_two_images.py  test_mode_resolver.py  test_pdf_pipeline.py  test_prompt_builder.py  test_quality_gate.py  test_queue.py  test_remote_config.py  test_s_fixes.py  test_webhooks.py
tools/: codex-npx.cmd  ork-monitor.py  restart-app.bat  run_local_stack.py
(+100 files in other folders)
